--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-
+<!-- nav -->
+<div class="container">
+  <nav class="navbar navbar-default" *ngIf='isLogedIn()'>
+      <ul class="nav navbar-nav" >
+           <li>
+            <a class="nav-item nav-link"  (click)="logout()">Logout</a>
+           </li>
+           <li>
+              <a routerLink='create'>Create</a>
+          </li>
+      </ul>
+  </nav>
+  <router-outlet></router-outlet>
+</div>
